tests/go_testdata_golden_override/builtinObjectFieldsEx_bad2.jsonnet.golden
type error: expected boolean, got string
    argument <hidden> evaluation
    builtinObjectFieldsEx_bad2.jsonnet:1:1-31: function <builtin_object_fields_ex> call